Change pictures to COKMC
Change pictures to use those taken by Amanda for COKMC.

--- a/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
@@ -6,7 +6,10 @@
             <div class="col-md-12 wow fadeIn" data-wow-delay="0.2s">
                 
                 <!--Featured Image-->
-                <img src="~/Content/img/slide17.jpg" />
+                <div class="view hm-black-light">
+                    <img src="~/Content/img/ClotheOurKids/COKTrailer-2.jpg" class="img-fluid" alt="" />
+                    <div class="mask flex-center"></div>
+                </div>
 
                 <!--Page Description-->
                 <div class="jumbotron wow fadeIn" data-wow-delay="0.4s">
@@ -46,13 +49,13 @@
         <div class="row features-small wow fadeIn" data-wow-delay="0.4s">
 
             <!--First column-->
-            <div class="col-md-5 mb-r center-on-small-only align-self-center">                
-                <img src="~/Content/img/TennesseeCOK/take action.jpg" class="img-fluid" />
+            <div class="col-md-5 mb-r center-on-small-only">                
+                <img src="~/Content/img/ClotheOurKids/COKTrailer-12.jpg" class="img-fluid" />
             </div>
             <!--/First column-->
 
             <!--Second column-->
-            <div class="col-md-7 center-on-small-only">
+            <div class="col-md-7 center-on-small-only align-self-center">
                 <!--First row-->
                 <div class="row">
                     <div class="col-1">
@@ -120,7 +123,7 @@
                 <div class="card card-cascade wider">
                     <!--Card image-->
                     <div class="view overlay hm-white-slight">
-                        <img src="~/Content/img/TennesseeCOK/HostADrive.jpg" class="img-fluid" />
+                        <img src="~/Content/img/downloaded/Need_A_Miracle.jpg" class="img-fluid" />
                         <a href="#!">
                             <div class="mask waves-effect waves-light"></div>
                         </a>
@@ -165,7 +168,7 @@
                 <div class="card card-cascade wider">
                     <!--Card image-->
                     <div class="view overlay hm-white-slight">
-                        <img src="~/Content/img/TennesseeCOK/Donate.jpg" class="img-fluid" />
+                        <img src="~/Content/img/downloaded/looking_for_a_friend.jpeg" class="img-fluid" />
                         <a href="#!">
                             <div class="mask waves-effect waves-light"></div>
                         </a>
@@ -203,7 +206,7 @@
                 <div class="card card-cascade wider">
                     <!--Card image-->
                     <div class="view overlay hm-white-slight">
-                        <img src="~/Content/img/TennesseeCOK/FAQ.jpg" class="img-fluid" />
+                        <img src="~/Content/img/downloaded/firefighters.jpeg" class="img-fluid" />
                         <a href="#!">
                             <div class="mask waves-effect waves-light"></div>
                         </a>
