--- a/ClotheOurKids.Web/Views/AboutUs/WhatWeGive.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhatWeGive.cshtml
@@ -6,7 +6,10 @@
             <div class="col-md-12 wow fadeIn" data-wow-delay="0.2s">
 
                 <!--Featured Image-->
-                <img src="~/Content/img/slide17.jpg" />
+                <div class="view">
+                    <img src="~/Content/img/ClotheOurKids/COKTrailer-9.jpg" class="img-fluid" alt="" />
+                    <div class="mask flex-center"></div>
+                </div>
 
                 <!--Page Description-->
                 <div class="jumbotron wow fadeIn" data-wow-delay="0.4s">
