--- a/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
@@ -6,7 +6,10 @@
             <div class="col-md-12 wow fadeIn" data-wow-delay="0.2s">
 
                 <!--Featured Image-->
-                <img src="~/Content/img/slide17.jpg" />
+                <div class="view hm-black-light">
+                    <img src="~/Content/img/ClotheOurKids/COKTrailer-22.jpg" class="img-fluid" alt="" />
+                    <div class="mask flex-center"></div>
+                </div>
 
                 <!--Page Description-->
                 <div class="jumbotron wow fadeIn" data-wow-delay="0.4s">
@@ -40,8 +43,8 @@
             <div class="col-md-6 mb-r">
 
                 <!--Image-->
-                <div class="view overlay hm-white-slight z-depth-2">
-                    <img src="~/Content/img/TennesseeCOK/take action.jpg" />
+                <div class="view overlay hm-white-slight z-depth-2" style="max-height:400px;">
+                    <img src="~/Content/img/ClotheOurKids/COKTrailer-6.jpg" class="img-fluid" />
                     <a>
                         <div class="mask waves-effect waves-light"></div>
                     </a>
