--- a/ClotheOurKids.Web/Views/RequestClothes/RequestClothes.cshtml
+++ b/ClotheOurKids.Web/Views/RequestClothes/RequestClothes.cshtml
@@ -8,7 +8,11 @@
             <div class="col-md-12 wow fadeIn" data-wow-delay="0.2s">
 
                 <!--Featured Image-->
-                <img src="~/Content/img/slide17.jpg" />
+                <div class="view hm-black-light">
+                    <img src="~/Content/img/ClotheOurKids/COKTrailer-10.jpg" class="img-fluid" alt="" />
+                    <div class="mask flex-center"></div>
+                </div>
+                
 
                 <!--Page Description-->
                 <div class="jumbotron wow fadeIn" data-wow-delay="0.4s">
