--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -209,6 +209,12 @@
                 }
             });
 
+
+            if (isSmallWidth()) {
+                $('header .nav-item.btn-group .nav-link').addClass('dropdown-toggle');
+            }
+
+
             $(window).on('resize', function () {
                 if (isSmallWidth()) {
                     $('header .nav-item.btn-group .nav-link').addClass('dropdown-toggle');
