--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -38,13 +38,13 @@
 
 </head>
 <body id="bodyDiv" class="kids-skin">
-    <div id="my-page">
+    <div id="page-wrapper">
 
         @Html.Partial("_LoginForm")
 
         <header>
 
-            <div class="container-fluid navContainer mt-1 mb-1 d-flex justify-content-lg-center">
+            <div class="container-fluid navContainer d-flex justify-content-lg-center">
                 <div class="row align-items-center headerPad">
                     <div class="column-one d-lg-flex justify-content-lg-center ">
 
@@ -54,60 +54,65 @@
                             </span>
                         </a>
 
-                        <!--Navbar-->
-                        <nav id="navbar" class="navbar navbar-toggleable-md border-0 navbar-light z-depth-0">
-
-                            <button class="navbar-toggler navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-
-                            <!--Collapse content-->
-                            <div class="collapse navbar-collapse" id="navbarNav">
-
-                                <!--Links-->
-                                <ul class="nav navbar-nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Home <span class="sr-only">(current)</span></a>
-                                    </li>
-                                    <li class="nav-item dropdown btn-group">
-                                        <a class="nav-link waves-effect waves-light" id="AboutMeMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
-                                        <div class="dropdown-menu dropdown-primary" aria-labelledby="AboutMeMenu">
-                                            <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhatWeDo")">What We Do</a>
-                                            <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhoWeAre")">Who We Are</a>
-                                            <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhatWeGive")">What We Give</a>
-                                            <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("FAQ")">Frequently Asked Questions</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Who We Serve</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Stories</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("RequestClothes")">Request Clothes</a>
-                                    </li>
-                                </ul>
-                                @*<ul class="navbar-nav nav-flex-icons">
-                                        @if (Request.IsAuthenticated)
-                                        {
-                                            <li class="nav-item dropdown">
-                                                <a class="nav-link dropdown-toggle waves-effect waves-light" href="#" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i></a>
-                                                <div class="dropdown-menu dropdown-secondary dropdown-menu-right" aria-labelledby="userDropdown">
-                                                    <a class="dropdown-item waves-effect waves-light" href="#">My Account</a>
-                                                    <a class="dropdown-item waves-effect waves-light" href="@Url.Action("LogOff", "Account")">Logout</a>
-                                                </div>
-                                            </li>
-                                        }
-                                    </ul>*@
+                        <div id="navbar" class="navbar navbar-toggleable-md navbar-light z-depth-0">
+                            <div class="hidden-md-down">    
+                                    <!--Links-->
+                                    <ul class="nav navbar-nav" id="mainSiteMenu">
+                                        <li class="nav-item">
+                                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Home <span class="sr-only">(current)</span></a>
+                                        </li>
+                                        <li class="nav-item dropdown btn-group">
+                                            <span class="nav-link waves-effect waves-light" id="AboutMeMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</span>
+                                            <div class="dropdown-menu dropdown-primary" aria-labelledby="AboutMeMenu">
+                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhatWeDo")">What We Do</a>
+                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhoWeAre")">Who We Are</a>
+                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhatWeGive")">What We Give</a>
+                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("FAQ")">Frequently Asked Questions</a>
+                                            </div>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Who We Serve</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Stories</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("RequestClothes")">Request Clothes</a>
+                                        </li>
+                                    </ul>
+                                
                             </div>
-                            <!--/.Collapse content-->
-
+                            <div class="hidden-lg-up navbar-inner">
+                                <div class="container">
+                                    <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+                                    <a class="navbar-toggler" href="#mobileMenu">
+                                        <span class="navbar-toggler-icon"></span>
+                                        <p>Menu</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <nav id="mobileMenu" class="hidden-lg-up">
+                            <ul>
+                                <li>
+                                    <a href="@Url.RouteUrl("Home")">Home</a>
+                                </li>
+                                <li><span>About us</span>
+                                    <ul>
+                                        <li><a href="@Url.RouteUrl("WhatWeDo")">What We Do</a></li>
+                                        <li><a href="@Url.RouteUrl("WhoWeAre")">Who We Are</a></li>
+                                        <li><a href="@Url.RouteUrl("WhatWeGive")">What We Give</a></li>
+                                        <li><a href="@Url.RouteUrl("FAQ")">Frequently Asked Questions</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="@Url.RouteUrl("Home")">Who We Serve</a></li>
+                                <li><a href="@Url.RouteUrl("Home")">Stories</a></li>
+                                <li><a href="@Url.RouteUrl("RequestClothes")">Request Clothes</a></li>
+                            </ul>
                         </nav>
-                        <!--/.Navbar-->
                     </div>
                     <div class="column-two d-flex justify-content-start">
-                        <ul class="default header-cta-buttons visible-lg">
+                        <ul class="default header-cta-buttons hidden-lg-down">
                             <li>
                                 <a class="btn btn-rounded btn-danger" href="@Url.RouteUrl("Donate")">Give</a>
                             </li>
@@ -121,9 +126,9 @@
                     </div>
                 </div>
             </div>
-            <ul class="default header-cta-buttons hidden-lg">
+            <ul class="default header-cta-buttons hidden-xl-up full-width-buttons">
                 <li>
-                    <a class=" btn btn-rounded btn-danger" href="@Url.RouteUrl("Donate")">Give</a>
+                    <a class="btn btn-rounded btn-danger" href="@Url.RouteUrl("Donate")">Give</a>
                 </li>
                 <li>
                     <a class="btn btn-rounded btn-info" href="@Url.RouteUrl("GetInvolved")">Get Involved</a>
@@ -133,6 +138,7 @@
                 </li>
             </ul>
 
+            <div class="clearfix"></div>
 
             @RenderSection("headerMask", required: false)
 
@@ -202,29 +208,50 @@
 
             headerAnimationEvent = whichAnimationEvent();
 
-            $('#navbarNav').on('show.bs.collapse hide.bs.collapse', function (e) {
-                if (e.type == 'show') {                    
-                    animateCollapse(this, 'fadeInRight');
+            //$("#mobileMenu").append($("#mainSiteMenu").clone().attr("id", "mobileMenu").attr("class", ""));
+            $('#mobileMenu').mmenu({
+                //options
+                offCanvas: {
+                    "zposition": "front",
+                    "position": "right"
+                },
+                extensions: [
+                    "fullscreen",
+                    "border-none"
+                ],
+                setSelected: {
+                    "hover": true
                 }
-                else {
-                    animateCollapse(this, 'fadeOutRight');
-                }
-            });
-
-
-            if (isSmallWidth()) {
-                $('header .nav-item.btn-group .nav-link').addClass('dropdown-toggle');
-            }
-
-
-            $(window).on('resize', function () {
-                if (isSmallWidth()) {
-                    $('header .nav-item.btn-group .nav-link').addClass('dropdown-toggle');
-                }
-                else {
-                    $('header .nav-item.btn-group .nav-link').removeClass('dropdown-toggle');
+            }, {
+                //configuration
+                offCanvas: {
+                    pageSelector: '#page-wrapper'
                 }
             });
+
+            //$('#navbarNav').on('show.bs.collapse hide.bs.collapse', function (e) {
+            //    if (e.type == 'show') {                    
+            //        animateCollapse(this, 'fadeInRight');
+            //    }
+            //    else {
+            //        animateCollapse(this, 'fadeOutRight');
+            //    }
+            //});
+
+
+            //if (isSmallWidth()) {
+            //    $('header .nav-item.btn-group .nav-link').addClass('dropdown-toggle');
+            //}
+
+
+            //$(window).on('resize', function () {
+            //    if (isSmallWidth()) {
+            //        $('header .nav-item.btn-group .nav-link').addClass('dropdown-toggle');
+            //    }
+            //    else {
+            //        $('header .nav-item.btn-group .nav-link').removeClass('dropdown-toggle');
+            //    }
+            //});
         });
 
     </script>
